<resources>
    <string name="app_name">Assignmetntwo</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="submit">Submit</string>
    <string name="contacts">Contacts</string>
    <string name="title">Mo. Banking</string>
    <string name="banksnearby">Bank\nNearby</string>
    <string name="news">News</string>
    <string name="whatweoffer">What We\nOffer</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="gbp">GBP</string>
    <string name="rur">RUR</string>
    <string name="usd_val">351,34</string>
    <string name="eur_val">406,94</string>
    <string name="gbp_val">456,64</string>
    <string name="rur_val">5,54</string>
    <string name="login">Login or Sign Up</string>
    <string name="charactercount">Character Count</string>
    <string name="backgroundcolor">Background Color</string>
    <string name="rippleeffect">Ripple Effect</string>
    <string name="btmwithimg">Button with left side image inside</string>
    <string name="fadeout">Fade out Animation</string>
    <string name="rotate">Rotate animation</string>
    <string name="blink">Blink Animation</string>
    <string name="zoomout">Zoom Out animation</string>
    <string name="assignmenttwo">Assignment Two</string>
    <string name="layout">Layout</string>
    <string name="animations">Animations</string>
    <string name="buttons">Buttons</string>
    <string name="textview">Text View</string>
</resources>
