<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/fadeout"
            android:layout_width="@dimen/size_200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/fadeout" />

        <Button
            android:id="@+id/rorate"
            android:layout_width="@dimen/size_200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/size_10dp"
            android:text="@string/rotate" />

        <Button
            android:id="@+id/blink"
            android:layout_width="@dimen/size_200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/size_10dp"
            android:text="@string/blink" />

        <Button
            android:id="@+id/zoomout"
            android:layout_width="@dimen/size_200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/size_10dp"
            android:text="@string/zoomout" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>