<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F6FCF5">


        <RelativeLayout
            android:id="@+id/layout_navigation"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_60dp"
            android:layout_marginStart="@dimen/size_10dp"
            android:layout_marginLeft="@dimen/size_10dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <View
                    android:layout_width="@dimen/size_20dp"
                    android:layout_height="@dimen/size_3dp"
                    android:layout_marginStart="@dimen/size_25dp"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:background="#000000" />


                <View
                    android:layout_width="@dimen/size_35dp"
                    android:layout_height="@dimen/size_3dp"
                    android:layout_marginStart="@dimen/size_10dp"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:background="#000000" />


                <View
                    android:layout_width="@dimen/size_20dp"
                    android:layout_height="@dimen/size_3dp"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:background="#000000" />

            </LinearLayout>
        </RelativeLayout>


        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_17dp"
            android:text="@string/title"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintEnd_toStartOf="@+id/notification_img"
            app:layout_constraintStart_toEndOf="@+id/layout_navigation"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/notification_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_15dp"
            android:src="@drawable/ic_solar_energy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/size_5dp"
            android:layout_height="@dimen/size_5dp"
            android:layout_marginTop="@dimen/size_12dp"
            android:layout_marginEnd="@dimen/size_13dp"
            android:layout_marginRight="@dimen/size_13dp"
            android:src="@drawable/circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear_bank_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintStart_toEndOf="@+id/layout_navigation"
            app:layout_constraintTop_toBottomOf="@+id/notification_img">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_15dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/size_15dp">

                <RelativeLayout
                    android:layout_width="@dimen/size_150dp"
                    android:layout_height="@dimen/size_150dp"
                    android:layout_gravity="center">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:padding="@dimen/size_20dp"
                        android:src="@drawable/ic_navigation"
                        android:tint="#aba8a8" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:padding="@dimen/size_15dp"
                        android:text="@string/banksnearby"
                        android:textSize="@dimen/size_20dp"
                        android:textStyle="bold" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_15dp"
                android:layout_marginRight="@dimen/size_10dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/size_15dp">

                <RelativeLayout
                    android:layout_width="@dimen/size_150dp"
                    android:layout_height="@dimen/size_150dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:padding="@dimen/size_20dp"
                        android:src="@drawable/ic_speaker"
                        android:tint="#c7c6c6" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:padding="@dimen/size_15dp"
                        android:text="@string/news"
                        android:textSize="@dimen/size_20dp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_offer_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/linear_bank_news">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_15dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/size_15dp">

                <RelativeLayout
                    android:layout_width="@dimen/size_150dp"
                    android:layout_height="@dimen/size_150dp"
                    android:layout_gravity="center">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:padding="@dimen/size_20dp"
                        android:src="@drawable/ic_cube"
                        android:tint="#c7c6c6" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:padding="@dimen/size_15dp"
                        android:text="@string/whatweoffer"
                        android:textSize="@dimen/size_20dp"
                        android:textStyle="bold" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_15dp"
                android:layout_marginRight="@dimen/size_10dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/size_15dp">

                <RelativeLayout
                    android:layout_width="@dimen/size_150dp"
                    android:layout_height="@dimen/size_150dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:padding="@dimen/size_20dp"
                        android:src="@drawable/ic_envelope"
                        android:tint="#c7c6c6" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:padding="@dimen/size_15dp"
                        android:text="@string/contacts"
                        android:textSize="@dimen/size_20dp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/layout_offer_news">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_10dp"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:text="@string/usd"
                    android:textSize="@dimen/size_18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_10dp"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:text="@string/usd_val"
                    android:textColor="#000000"
                    android:textSize="@dimen/size_18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_10dp"
                    android:rotation="180"
                    android:src="@drawable/ic_sort_down"
                    android:tint="#4bae85" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_10dp"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:text="@string/eur"
                    android:textSize="@dimen/size_18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_10dp"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:text="@string/eur_val"
                    android:textColor="#000000"
                    android:textSize="@dimen/size_18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_10dp"
                    android:src="@drawable/ic_sort_down"
                    android:tint="#91445A" />


            </LinearLayout>


        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_4dp"
            android:layout_margin="@dimen/size_15dp"
            android:background="#EFF4EF"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout3" />

        <LinearLayout
            android:id="@+id/linearlayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/view1">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_10dp"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:text="@string/gbp"
                    android:textSize="@dimen/size_18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_10dp"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:text="@string/gbp_val"
                    android:textColor="#000000"
                    android:textSize="@dimen/size_18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_10dp"
                    android:src="@drawable/ic_sort_down"
                    android:tint="#91445A" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_10dp"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:text="@string/rur"
                    android:textSize="@dimen/size_18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_10dp"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:text="@string/rur_val"
                    android:textColor="#000000"
                    android:textSize="@dimen/size_18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_10dp"
                    android:rotation="180"
                    android:src="@drawable/ic_sort_down"
                    android:tint="#4bae85" />

            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_20dp"
            android:background="@drawable/buttonlogin"
            android:padding="@dimen/size_15dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>